--- a/content/themes/orangenano/sass/components/navigation/_menu-reseller.scss
+++ b/content/themes/orangenano/sass/components/navigation/_menu-reseller.scss
@@ -20,3 +20,22 @@
 		}
 	}
 }
+
+//Media queries
+@media #{$medium-down}{
+	.reseller{
+		.menu{
+			text-align: left;
+			
+			li{
+				text-align: left;
+				float: none !important;
+				
+				p,
+				a{
+					line-height: 1.5 !important;
+				}
+			}
+		}
+	}
+}
